# neutron-backend-ts

./: .gitignore  README.md  copyStaticAssets.ts  package-lock.json  package.json  sample.env  tsconfig.json
data/: model.pt
domain/: FullMove.ts  GameState.ts  schemas.ts  utils.ts
game/: engine.ts
infra/: errors.ts  logger.ts
native/: .clang-format  CMakeLists.txt  binding.gyp  main.cpp
native/include/: Board.h  Direction.h  FullMove.h  MinimaxAsyncWorker.h  Move.h  PieceKind.h  cleaners.h  gameutils.h  minimax.h
native/rl/: CMakeLists.txt  RlAddon.cpp  RlAsyncWorker.cpp  RlAsyncWorker.h
native/rl/include/neutron_rl/: agent.hpp  game_state.hpp  mcts.hpp  model_loader.hpp
native/rl/src/: agent.cpp  game_state.cpp  mcts.cpp  model_loader.cpp
native/src/: Board.cpp  FullMove.cpp  MinimaxAddon.cpp  MinimaxAsyncWorker.cpp  Move.cpp  cleaners.cpp  gameutils.cpp  minimax.cpp
sql/: init.sql
src/: server.ts
src/browser/: index.html  main-6N67XTNP.js  main-DU6W6GXJ.js  main-PIVPO67B.js  styles-7GO6663R.css
src/domain/: GameState.ts  Move.ts  schemas.ts  types.ts  utils.ts
src/game/: engine.ts  store.ts
src/infra/: config.ts  event-log.ts  pg.ts
types/: module-alias.d.ts
